another fix on mobile (changing h2)

--- a/src/components/Hero/Hero.css
+++ b/src/components/Hero/Hero.css
@@ -6,7 +6,3 @@
 .hero-description p:first-child {
   margin-bottom: 15px;
 }
-
-.hero-description {
-  margin-bottom: 50px;
-}
